[package]
name = "batl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
colored = "2.0.0"
dialoguer = "0.10.4"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.8.1"
rlua = "0.19.4"
serde = { version = "1.0.160", features = ["derive"] }
thiserror = "1.0.40"
toml = "0.7.3"
